baseUrl 설정 및 baseEntity 설정